# yaarr

./: .gitignore  .gitmodules  .markdownlint-cli2.yaml  Cargo.toml  Justfile  opencode.jsonc  package.json
.claude-plugin/: marketplace.json
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: release.yml  rust-test.yml  stale-skill-detect.yml  stale-skill-refresh.yml  unit-test.yml
claude-plugins/claude-md-management-reloaded/: README.md
claude-plugins/claude-md-management-reloaded/.claude-plugin/: plugin.json
claude-plugins/claude-md-management-reloaded/hooks/: hooks.json
claude-plugins/claude-md-management-reloaded/scripts/: check-claude-md-size.sh
claude-plugins/claude-md-management-reloaded/skills/claude-md-improver/: SKILL.md
claude-plugins/claude-md-management-reloaded/skills/init-claude-md/: SKILL.md
claude-plugins/claude-md-management-reloaded/skills/revise-claude-md/: SKILL.md
claude-plugins/prompt-evaluation-claude-code/: README.md
claude-plugins/prompt-evaluation-claude-code/.claude-plugin/: plugin.json
claude-plugins/prompt-evaluation-claude-code/skills/capture-eval-case/: SKILL.md
claude-plugins/prompt-evaluation-claude-code/skills/prompt-evaluation-claude-code/: SKILL.md
claude-plugins/search-agents/: README.md
claude-plugins/search-agents/.claude-plugin/: plugin.json
claude-plugins/search-agents/agents/: aws-search.md  microsoft-search.md  web-search.md
claude-plugins/search-agents/evals/aws-search/: README.md  eval-set-v1.jsonl  eval-set-v2.jsonl
claude-plugins/search-agents/evals/microsoft-search/: README.md  eval-set-v1.jsonl
claude-plugins/search-agents/evals/web-search/: README.md  eval-set-v1.jsonl
claude-plugins/wsl-notification/: README.md
claude-plugins/wsl-notification/.claude-plugin/: plugin.json
claude-plugins/wsl-notification/hooks/: hooks.json
claude-plugins/wsl-notification/scripts/: notify.sh
crates/mcp-server/: Cargo.toml  Justfile  README.md
crates/mcp-server/src/: lib.rs  prompts.rs  resources.rs  tasks.rs  tools.rs
crates/mcp-server/tests/: elicitation.rs  prompts.rs  resources.rs  task.rs  tools.rs
crates/skill-archiver/: Cargo.toml  README.md
crates/skill-archiver/src/: lib.rs
crates/skill-cli/: Cargo.toml  README.md
crates/skill-cli/src/: cli.rs  github.rs  main.rs  pipeline.rs  sources.rs
crates/skill-parser/: Cargo.toml  README.md
crates/skill-parser/src/: lib.rs
crates/skill-validator/: Cargo.toml  README.md
crates/skill-validator/src/: lib.rs
crates/toasty-app/: Cargo.toml  Justfile  README.md
crates/toasty-app/src/: db.rs  demo.rs  embedded.rs  lib.rs  models.rs
crates/toasty-app/tests/: batch.rs  crud.rs  embedded.rs  filtering.rs  pagination.rs  preloading.rs  relationships.rs  transactions.rs  vec_fields.rs
crates/toasty-app/tests/common/: mod.rs
refs/web-view-transition-api/: Using.md  Using_types.md  ViewTransition.md  ViewTransitionTypeSet.md  View_Transition_API.md  finished.md  ready.md  skipTransition.md  startViewTransition.md  types.md  updateCallbackDone.md
scripts/: convert_mcp_spec.py
skills/a2a-knowledge/: .sources.json  SKILL.md
skills/a2a-knowledge/references/: specification.md
skills/a2ui-knowledge/: .sources.json  SKILL.md
skills/a2ui-knowledge/references/v0.8/: a2a-extension.md  custom-catalog.md  protocol.md
skills/a2ui-knowledge/references/v0.9/: a2a-extension.md  basic-catalog-guide.md  custom-catalog-guide.md  custom-functions.md  evolution-guide.md  protocol.md  renderer-guide.md
skills/a2ui-knowledge/references/v1.0/: a2a-extension.md  basic-catalog-guide.md  custom-catalog-guide.md  custom-functions.md  evolution-guide.md  protocol.md  renderer-guide.md
skills/acp-knowledge/: .sources.json  SKILL.md
skills/acp-knowledge/evals/: evals.json
skills/ag-ui-knowledge/: .sources.json  SKILL.md
skills/ag-ui-knowledge/references/: integrations.md
skills/ag-ui-knowledge/references/concepts/: agents.md  architecture.md  capabilities.md  events.md  generative-ui-specs.md  interrupts.md  messages.md  middleware.md  reasoning.md  serialization.md  state.md  tools.md
skills/ag-ui-knowledge/references/quickstart/: client.md  middleware.md  server.md
skills/ag-ui-knowledge/references/sdks/: others.md  python.md  typescript.md
skills/development-standards/: SKILL.md
skills/development-standards/references/general/: git-repository.md
skills/development-standards/references/nodejs/: general.md
skills/development-standards/references/python/: general.md
skills/development-standards/references/rust/: general.md  library.md  web-graphql.md  web-openapi.md
skills/development-standards/references/terraform/: general.md
skills/development-standards/references/typescript/: general.md
skills/mcp-knowledge/: .sources.json  SKILL.md
skills/mcp-knowledge/evals/: evals.json
skills/mcp-knowledge/references/2024-11-05/: architecture.md  completion.md  lifecycle.md  progress.md  prompts.md  resources.md  roots.md  sampling.md  tools.md  transports.md
skills/mcp-knowledge/references/2025-03-26/: architecture.md  authorization.md  changelog.md  completion.md  lifecycle.md  logging.md  pagination.md  progress.md  prompts.md  (+5 more)
skills/qwik/: README.md  SKILL.md
skills/qwik/.claude-plugin/: plugin.json
skills/qwik/references/: qwik-city.md  qwik-core.md  qwik-deprecated.md
skills/solidjs/: SKILL.md
skills/solidjs/evals/: evals.json
skills/solidjs/references/: core.md  meta.md  router.md  solidstart.md  testing.md
skills/web-view-transition/: README.md
skills/web-view-transition/.claude-plugin/: plugin.json
skills/wxt/: README.md
skills/wxt/.claude-plugin/: plugin.json
(+128 files in other folders)
