[package]
name = "skill-archiver"
description = "Packages a validated Agent Skill into a ZIP archive."
readme = "README.md"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
skill-parser = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
zip = { workspace = true }
walkdir = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
